--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>17</maven.compiler.release>
-        <exec.mainClass>com.elixr.apitestutility.APITestUtility</exec.mainClass>
+        <exec.mainClass>com.elixr.apitestutility.Screen1</exec.mainClass>
     </properties>
     <dependencies>
     <!-- https://mvnrepository.com/artifact/org.swinglabs/swingx -->
