--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>17</maven.compiler.release>
-        <exec.mainClass>com.elixr.apitestutility.Screen1</exec.mainClass>
+        <exec.mainClass>com.elixr.apitestutility.HomePage</exec.mainClass>
     </properties>
     <dependencies>
     <!-- https://mvnrepository.com/artifact/org.swinglabs/swingx -->
@@ -62,6 +62,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.3</version> <!-- Check for the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE230</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -75,7 +80,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.elixr.apitestutility.Screen1</mainClass> <!-- Replace with your main class -->
+                            <mainClass>com.elixr.apitestutility.HomePage</mainClass> <!-- Replace with your main class -->
                         </manifest>
                     </archive>
                 </configuration>
